--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,5 @@ jobs:
 
     - name: Test with Gradle
       run: ./gradlew test
+      env:
+        DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
