--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,12 +10,16 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Set up JDK 1.8
+    - name: Set up Java
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 13
 
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Test with Maven
+      uses: "LucaFeger/action-maven-cli@master"
+      args: "clean test"
       env:
         DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
