--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: Test with Maven
       uses: "LucaFeger/action-maven-cli@master"
-      args: "clean test"
+      with:
+        args: "clean test"
       env:
         DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
