--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <source>8</source>
                     <tags>
                         <tag>
                             <name>http.response.details</name>
