--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,27 @@
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'io.dyspatch'
-version = '5.0.1'
+version = '5.0.2'
 
 buildscript {
     repositories {
-        mavenCentral()
+        maven { url "https://repo1.maven.org/maven2" }
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.+'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+    }
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
     }
 }
 
@@ -36,8 +45,8 @@ if(hasProperty('target') && target == 'android') {
             targetSdkVersion 25
         }
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_7
-            targetCompatibility JavaVersion.VERSION_1_7
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
         }
 
         // Rename the aar correctly
@@ -52,7 +61,7 @@ if(hasProperty('target') && target == 'android') {
         }
 
         dependencies {
-            provided 'javax.annotation:jsr250-api:1.0'
+            provided 'javax.annotation:javax.annotation-api:1.3.2'
         }
     }
 
@@ -82,8 +91,8 @@ if(hasProperty('target') && target == 'android') {
     apply plugin: 'java'
     apply plugin: 'maven'
 
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 
     install {
         repositories.mavenInstaller {
@@ -98,15 +107,15 @@ if(hasProperty('target') && target == 'android') {
 }
 
 dependencies {
-    compile 'io.swagger:swagger-annotations:1.5.22'
+    compile 'io.swagger:swagger-annotations:1.5.24'
     compile "com.google.code.findbugs:jsr305:3.0.2"
-    compile 'com.squareup.okhttp3:okhttp:3.14.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.14.2'
-    compile 'com.google.code.gson:gson:2.8.5'
-    compile 'io.gsonfire:gson-fire:1.8.3'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-    compile 'org.threeten:threetenbp:1.4.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.squareup.okhttp3:okhttp:4.7.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+    compile 'com.google.code.gson:gson:2.8.6'
+    compile 'io.gsonfire:gson-fire:1.8.4'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
+    testCompile 'junit:junit:4.13'
 }
 
 javadoc {
