--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,6 @@ jobs:
         run: ./gradlew build
         env:
           DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
+        with:
+          template_id: ${{ steps.vars.outputs.templateId }}
+          draft_id: ${{ steps.vars.outputs.draftId }}
