--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
         with:
           java-version: 13
 
+      - name: Verify Outputs
+        run: "echo ${{ steps.vars.outputs.templateId }}
+        
       - name: Build with Gradle
         run: ./gradlew build
         env:
