adjust output param syntax

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           token: ${{ secrets.MACHINES_SWU_TOKEN }}
           ref: master
       - name: Run api setup action
+        id: setup_action
         uses: ./
         with:
           email: ${{ secrets.QA_USERNAME }}
@@ -38,11 +39,11 @@ jobs:
           java-version: 13
 
       - name: Verify Outputs
-        run: "echo ${{ steps.vars.outputs.templateId }}"
+        run: "echo templateId:${{ steps.setup_action.outputs.templateId }}"
 
       - name: Build with Gradle
         run: ./gradlew build
         env:
           DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
-          DYSPATCH_TEMPLATE_ID: ${{ steps.vars.outputs.templateId }}
-          DYSPATCH_DRAFT_ID: ${{ steps.vars.outputs.draftId }}
+          DYSPATCH_TEMPLATE_ID: ${{ steps.setup_action.outputs.templateId }}
+          DYSPATCH_DRAFT_ID: ${{ steps.setup_action.outputs.draftId }}
