--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,7 @@ jobs:
         with:
           java-version: 13
 
-      - name: Verify Outputs
-        run: "echo templateId:${{ steps.setup_action.outputs.templateId }}"
-
-      - name: Build with Gradle
+      - name: Build and Test with Gradle
         run: ./gradlew build
         env:
           DYSPATCH_API_KEY: ${{ secrets.DYSPATCH_API_KEY }}
